--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/WebMathBox.framework.js",
         codeUrl: buildUrl + "/WebMathBox.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "HGoto",
         productName: "MathCard",
         productVersion: "1.0",
         showBanner: unityShowBanner,
